--- a/H2.md
+++ b/H2.md
@@ -18,28 +18,137 @@
 -
 -
 
-### A) Hello Vagrant! Osoita jollain komennolla, että Vagrant on asennettu
+## Tehtävät (Suoritettu käyttäen Windows komentokehotetta/Powershell & VScode & Oracle Virtualbox)
 
-Vagrant ladattu Winwdosille, ja virtualbox jo ennestään ladattuna.
+#### A) Hello Vagrant! Osoita jollain komennolla, että Vagrant on asennettu
 ![image](https://github.com/user-attachments/assets/057d2dcd-d4d1-4660-a960-4cc16c790a11)
+------------------------------------------------------------------------------------------------------------------------
 
 
-### B) Linux Vagrant. Tee Vagrantilla uusi Linux-virtuaalikone.
+#### B) Linux Vagrant. Tee Vagrantilla uusi Linux-virtuaalikone.
 
-Ennen kun laitoin virtuaalikoneen päälle loin sille oman kansion, tämän jälkeen käytin komentoa, joka loi konfiguraatio tiedoston
+Ennen kun laitoin virtuaalikoneen päälle loin sille oman kansion, tämän jälkeen käytin komentoa, joka loi konfiguraatio tiedoston, minkä jälkeen löin koneen päälle. 
 
 ![image](https://github.com/user-attachments/assets/04ab6e4f-deb6-42c9-a770-8fb15ffe4c2e)
 ![image](https://github.com/user-attachments/assets/d100062f-9651-4534-b6c0-2e556197b223)
-
-B Kohdan komennot
-'mkdir vagrant-kansio'
-'cd vagrant-kansio'
-'vagrant init debian/bookworm64'
-'vagrant up'
-'vagrant ssh'
-'whoami'
-'exit'
-'vagrant destroy'
+![image](https://github.com/user-attachments/assets/70fceeca-9080-4ac4-b420-06abe9536303)
 
 
+B Kohdan komennot järjestyksessä.
+- `mkdir vagrant-kansio`
+- `cd vagrant-kansio`
+- `vagrant init debian/bookworm64`
+- `vagrant up`
+- `vagrant ssh`
+- `whoami`
+- `exit`
+- `vagrant destroy`
 
+#### C) Kaksin kaunihimpi. Tee kahden Linux-tietokoneen verkko Vagrantilla. Osoita, että koneet voivat pingata toisiaan.
+------------------------------------------------
+Tässä tehtävässä loin 2 konetta, kun edellisessä tehtiin vain 1. Käytin samaa kansiota ja käytin komentoa millä loin tyhjän tekstitiedoston kyseisen kansion sisälle manuaalisesti kävin avaamassa Windows resurssienhallinnan kautta tiedoston ja avasin kyseisen tiedoston käyttäen VScode ja liitin config tiedoston kyseiseen. tämän jälkeen käynnistin koneet komennolla ja sen jälkeen pingasin koneita ssh yhteydellä.
+
+----------------------------------------------
+
+
+![image](https://github.com/user-attachments/assets/027db832-e0fc-41f0-b4f1-5aa0af2567bc) ![image](https://github.com/user-attachments/assets/598312c6-6ab5-4e1c-9069-508e399185be)
+![image](https://github.com/user-attachments/assets/e34198f8-3010-4bf4-abc5-6f6564899dad)
+![image](https://github.com/user-attachments/assets/7463f174-af21-42be-bf3c-646d30dac8c9)
+
+
+
+C Kohdan komennot + tekstitiedosto järjestyksessä.
+- `cd vagrant-kansio`
+- `vagrant init`
+- Vagrantfile muutokset `config.vm.box = "debian/bullseye64"` -> `config.vm.box = "debian/bookworm64"` Kuvassa näkyvissä rivillä 16
+- `Vagrant up`
+- `Vagrant ssh t001`
+- `ping 192.168.88.102` Verkkosoite laitettu muistiin configfilesta
+- `exit`
+- `Vagrant ssh t002`
+- `ping 192.168.88.101`
+- `exit`
+- `vagrant destroy`
+
+  --------------------------------------------------------------------------------------------------------------------------------------------
+#### D)Herra-orja verkossa
+
+Tein uuden vagrantfilen minkä sisälle tein tarvittavat muutokset, tämän jälkeen löin koneet käyntiin ja latasin salt-master ohjelman master koneelle ja salt-minionin ohjelman t001 koneelle, kyseisten latausten jälkeen muokkasin salt-minionin configuraatio asetuksia siten, että lisäsin sinne masterin osoitteen ja lisäsin ID: Minion, tämän jälkeen käynnistin uudelleen minionin, jotta asetukset tulivat voimaan, kyseisen jälkeen vaihdoin masterille takaisin ja katsoin oliko tullut avain näkyviin, jotta sen voi hyväksyä.
+
+Jotta sain ladattua salt master/minion ohjelmiston piti molemmille koneille myös tehdä Salt Project repository, sekä ladata curl 
+
+
+![image](https://github.com/user-attachments/assets/c32d250a-8ed3-4437-90bf-0b2be33fdbae)
+![image](https://github.com/user-attachments/assets/1610d25e-b1bf-44ae-bf2f-914c8a3e0146)
+![image](https://github.com/user-attachments/assets/712174d5-2197-451c-9234-49d54bd6c2f4)
+![image](https://github.com/user-attachments/assets/ee670018-1a12-491f-beae-e43beac7a2de)
+
+
+D Kohdan komennot + tekstitiedosto järjestyksessä.
+- `cd vagrant-kansio`
+- `vagrant init`
+- Vagrantfile muutokset `config.vm.box = "debian/bullseye64"` -> `config.vm.box = "debian/bookworm64"` 
+- `Vagrant up`
+- `vagrant ssh tmaster`
+- `sudo apt install curl`
+- `mkdir -p /etc/apt/keyrings`
+- `curl -fsSL https://packages.broadcom.com/artifactory/api/security/keypair/SaltProjectKey/public | sudo tee /etc/apt/keyrings/salt-archive-keyring.pgp`
+- `curl -fsSL https://github.com/saltstack/salt-install-guide/releases/latest/download/salt.sources | sudo tee /etc/apt/sources.list.d/salt.sources`
+- `sudo apt update`
+- `sudo apt-get -y install salt-master`
+- `hostname -I` Osoite talteen,
+- `exit`
+- Yllä olevia komentoja käytin masterilla,
+------------------------------------------------------------------------------------------
+-  Samoja komentoja käytin minionilla paitsi
+-  `vagrant ssh t001`
+-  `sudo apt-get -y salt-minion`
+-  `sudoedit /etc/salt/minion`
+-  Lisäsin konfiguraatio asetuksiin masterin osoitteen ja lisäsin ID:n
+-  `sudo systemctl restart salt-minion.service`
+- `exit`
+----------------------------------------------------------------------------------------
+- Kyseisten jälkeen siirryin masterille ja käytin alla olevia komentoja.
+- `sudo salt-key -L` Sain näkyviin odottavat avaimet 
+- `sudo salt-key -A` Komenolla sain näkyviin avaimen minkä halusin hyväksyä
+- `sudo salt '*' cmd.run 'whoami'` Komennolla kokeilin onko minionit toiminassa
+---------------------------------------------------------------------------------------------
+
+
+#### E) Kokeile vähintään kahta tilaa verkon yli
+
+Kokeilin tämän jälkeen CMD ja PKG tilafunktioita masterilla
+
+#### CMD
+![image](https://github.com/user-attachments/assets/bea071b4-1cc8-40b0-bb59-cce6a76d8f14)
+![image](https://github.com/user-attachments/assets/e629240e-645d-4c86-939b-68fcf7879005)
+
+
+#### PKG
+
+![image](https://github.com/user-attachments/assets/a186f5ac-fd8e-4126-9e28-33340e29563d)
+![image](https://github.com/user-attachments/assets/db5a71b1-644b-4805-9a89-31d41c12a6f5)
+
+
+E Kohdan komennot järjestyksessä
+- CMD komennot
+- `sudo salt '*' cmd.run 'whoami'`
+- `sudo salt '*' cmd.run 'hostname -I'`
+- PKG komennot
+- `sudo salt '*' state.single pkg.installed name=tree`
+- `sudo salt '*' state.single pkg.removed name=tree`
+  
+
+
+### Lähteet
+
+Kurssi. Palvelinten hallinta 2025. https://terokarvinen.com/palvelinten-hallinta/
+
+Karvinen 2018. Salt Quickstart – Salt Stack Master and Slave on Ubuntu Linux.  https://terokarvinen.com/2018/03/28/salt-quickstart-salt-stack-master-and-slave-on-ubuntu-linux/
+
+Karvinen 2021. Two Machine Virtual Network With Debian 11 Bullseye and Vagrant. https://terokarvinen.com/2021/two-machine-virtual-network-with-debian-11-bullseye-and-vagrant/
+
+Karvinen 2023. Salt Vagrant - automatically provision one master and two slaves. https://terokarvinen.com/2023/salt-vagrant/#infra-as-code---your-wishes-as-a-text-file
+
+Salt Project. Linux (DEB). https://docs.saltproject.io/salt/install-guide/en/latest/topics/install-by-operating-system/linux-deb.html
+  
