--- a/H2.md
+++ b/H2.md
@@ -2,23 +2,27 @@
 
 ## x) Lue ja tiivistä.
 
-### Karvinen 2021: Two Machine Virtual Network With Debian 11 Bullseye and Vagrant
--
--
--
+### Karvinen 2021: Two Machine Virtual Network With Debian 11 Bullseye and Vagrant (https://terokarvinen.com/2021/two-machine-virtual-network-with-debian-11-bullseye-and-vagrant/)
+- Vagrantin avulla voi luoda nopeasti virtuaalikoneita
+- Komennot `vagrant up` & `vagrant ssh koneen,nimi` & `vagrant destroy`
+- Vagrantin saa myös Windowsille ja Macille eikä pelkästään Linuxlle
 
-### Karvinen 2018: Salt Quickstart – Salt Stack Master and Slave on Ubuntu Linux 
--
--
--
+### Karvinen 2018: Salt Quickstart – Salt Stack Master and Slave on Ubuntu Linux (https://terokarvinen.com/2018/salt-quickstart-salt-stack-master-and-slave-on-ubuntu-linux/?fromSearch=salt%20quickstart%20salt%20stack%20master%20and%20slave%20on%20ubuntu%20linux)
+- Salt on työkalu millä pystytään ohjaamaan yhdeltä koneelta tuhansia
+- Avaimet tulee hyväksyä, jotta minionit toimivat 
+- Komennot `sudo apt-get install salt-master` & `sudo apt-get install salt-minion`
 
 
-### Karvinen 2023: Salt Vagrant - automatically provision one master and two slaves
--
--
--
+### Karvinen 2023: Salt Vagrant - automatically provision one master and two slaves  (https://terokarvinen.com/2023/salt-vagrant/#infra-as-code---your-wishes-as-a-text-file) vain kohdat Infra as Code - Your wishes as a text file & top.sls - What Slave Runs What States
+- top.sls tiedosto määrittää, mitkä tilat ajetaan orja koneilla
+- Jos kirjoitat YAML tiedostoa niin varmista, että käytät 2 välilyöntiä eikä tabulaattoria
+
+
+------------------------------------------------------------------------------------------------------------
 
 ## Tehtävät (Suoritettu käyttäen Windows komentokehotetta/Powershell & VScode & Oracle Virtualbox)
+
+
 
 #### A) Hello Vagrant! Osoita jollain komennolla, että Vagrant on asennettu
 ![image](https://github.com/user-attachments/assets/057d2dcd-d4d1-4660-a960-4cc16c790a11)
@@ -27,7 +31,7 @@
 
 #### B) Linux Vagrant. Tee Vagrantilla uusi Linux-virtuaalikone.
 
-Ennen kun laitoin virtuaalikoneen päälle loin sille oman kansion, tämän jälkeen käytin komentoa, joka loi konfiguraatio tiedoston, minkä jälkeen löin koneen päälle. 
+Ennen virtuaalikoneen käynnistämistä loin sille ensin oman kansion, tämän jälkeen käytin komentoa, Sen jälkeen käytin komentoa, joka loi konfiguraatiotiedoston, ja käynnistin koneen.
 
 ![image](https://github.com/user-attachments/assets/04ab6e4f-deb6-42c9-a770-8fb15ffe4c2e)
 ![image](https://github.com/user-attachments/assets/d100062f-9651-4534-b6c0-2e556197b223)
@@ -44,9 +48,15 @@ B Kohdan komennot järjestyksessä.
 - `exit`
 - `vagrant destroy`
 
+-------------------------------------------------------------------------------------------------------------------------
+
 #### C) Kaksin kaunihimpi. Tee kahden Linux-tietokoneen verkko Vagrantilla. Osoita, että koneet voivat pingata toisiaan.
+
 ------------------------------------------------
-Tässä tehtävässä loin 2 konetta, kun edellisessä tehtiin vain 1. Käytin samaa kansiota ja käytin komentoa millä loin tyhjän tekstitiedoston kyseisen kansion sisälle manuaalisesti kävin avaamassa Windows resurssienhallinnan kautta tiedoston ja avasin kyseisen tiedoston käyttäen VScode ja liitin config tiedoston kyseiseen. tämän jälkeen käynnistin koneet komennolla ja sen jälkeen pingasin koneita ssh yhteydellä.
+Tässä tehtävässä loin kaksi konetta, kun edellisessä tehtävässä tein vain yhden. Käytin samaa kansiota ja käytin komentoa, jolla loin tyhjän tekstitiedoston kyseiseen kansioon. Sen jälkeen avasin tiedoston Windowsin resurssienhallinnassa ja muokkasin sitä VScodella, liittäen konfiguraatiotiedoston siihen. Kun tämä oli valmis, käynnistin koneet komennolla ja testasin niiden yhteyksiä ping-komennolla SSH-yhteydellä
+
+Konfiguraatio tiedot saatu: https://terokarvinen.com/2021/two-machine-virtual-network-with-debian-11-bullseye-and-vagrant/
+
 
 ----------------------------------------------
 
@@ -73,16 +83,22 @@ C Kohdan komennot + tekstitiedosto järjestyksessä.
   --------------------------------------------------------------------------------------------------------------------------------------------
 #### D)Herra-orja verkossa
 
-Tein uuden vagrantfilen minkä sisälle tein tarvittavat muutokset, tämän jälkeen löin koneet käyntiin ja latasin salt-master ohjelman master koneelle ja salt-minionin ohjelman t001 koneelle, kyseisten latausten jälkeen muokkasin salt-minionin configuraatio asetuksia siten, että lisäsin sinne masterin osoitteen ja lisäsin ID: Minion, tämän jälkeen käynnistin uudelleen minionin, jotta asetukset tulivat voimaan, kyseisen jälkeen vaihdoin masterille takaisin ja katsoin oliko tullut avain näkyviin, jotta sen voi hyväksyä.
+Tein uuden Vagrantfile tiedoston ja lisäsin tarvittavat muutokset siihen. Sen jälkeen käynnistin koneet ja asensin salt-master ohjelman master-koneelle sekä salt-minion ohjelman t001 koneelle. Asennusten jälkeen muokkasin salt-minion koneen konfiguraatioasetuksia, lisäsin master-koneen osoitteen ja myös lisäsin ID:ksi minion. Käynnistin minionin uudelleen, jotta asetukset astuivat voimaan. Tämän jälkeen palasin master-koneelle ja tarkistin, näkyikö minionin avain, jotta voin hyväksyä sen.
 
-Jotta sain ladattua salt master/minion ohjelmiston piti molemmille koneille myös tehdä Salt Project repository, sekä ladata curl 
+Jotta sain ladattua salt-master ja salt-minion -ohjelmistot, molemmille koneille piti luoda Salt Project repository ja ladata curl
 
 
+
+Konfiguraatio tiedosto: https://terokarvinen.com/2023/salt-vagrant/#infra-as-code---your-wishes-as-a-text-file
+
+
+--------------------------------------------------------------
 ![image](https://github.com/user-attachments/assets/c32d250a-8ed3-4437-90bf-0b2be33fdbae)
 ![image](https://github.com/user-attachments/assets/1610d25e-b1bf-44ae-bf2f-914c8a3e0146)
 ![image](https://github.com/user-attachments/assets/712174d5-2197-451c-9234-49d54bd6c2f4)
 ![image](https://github.com/user-attachments/assets/ee670018-1a12-491f-beae-e43beac7a2de)
 
+-------------------------------------------------------------------------------------------------------------------------
 
 D Kohdan komennot + tekstitiedosto järjestyksessä.
 - `cd vagrant-kansio`
@@ -138,7 +154,7 @@ E Kohdan komennot järjestyksessä
 - `sudo salt '*' state.single pkg.installed name=tree`
 - `sudo salt '*' state.single pkg.removed name=tree`
   
-
+-------------------------------------------------------------------------------------------------------------------------
 
 ### Lähteet
 
