--- a/H2.md
+++ b/H2.md
@@ -85,7 +85,7 @@ C Kohdan komennot + tekstitiedosto järjestyksessä.
 
 Tein uuden Vagrantfile tiedoston ja lisäsin tarvittavat muutokset siihen. Sen jälkeen käynnistin koneet ja asensin salt-master ohjelman master-koneelle sekä salt-minion ohjelman t001 koneelle. Asennusten jälkeen muokkasin salt-minion koneen konfiguraatioasetuksia, lisäsin master-koneen osoitteen ja myös lisäsin ID:ksi minion. Käynnistin minionin uudelleen, jotta asetukset astuivat voimaan. Tämän jälkeen palasin master-koneelle ja tarkistin, näkyikö minionin avain, jotta voin hyväksyä sen.
 
-Jotta sain ladattua salt-master ja salt-minion -ohjelmistot, molemmille koneille piti luoda Salt Project repository ja ladata curl
+Jotta sain ladattua salt-master ja salt-minion ohjelmistot, molemmille koneille piti luoda Salt Project repository ja ladata curl
 
 
 
