--- a/H3.md
+++ b/H3.md
@@ -1,20 +1,187 @@
-# h3 Infraa koodina
+# H3 Infraa koodina 😧
 
-## Lue ja tiivistä
+## Lue ja tiivistä 📖
 
-### Karvinen 2014: Hello Salt Infra-as-Code
+### [Karvinen 2014: Hello Salt Infra-as-Code](https://terokarvinen.com/2024/hello-salt-infra-as-code/)
+
+- Tee omat kansiot jokaiselle init.sls tiedostolle, jotta se on selkeä
+<pre>
+/srv/salt/
+├── hello/
+│   └── init.sls
+├── pkg/
+│   └── init.sls
+└── file/
+    └── init.sls
+</pre>
+
+- hello sisällä oleva init.sls ajetaan paikallisesti komennolla `sudo salt-call --local state.apply hello`
 
 
 ### Salt contributors: Salt overview, kohdat
-#### Rules of YAML
--
--
+#### [Rules of YAML](https://docs.saltproject.io/salt/user-guide/en/latest/topics/overview.html#rules-of-yaml)
 
-#### YAML simple structure
--
--
+- Käytä välilyöntejä tabulaattorin sijasta.
+
+- Kommentit eivät vaikuta ohjelman toimintaan. Ne alkavat aina #merkillä.
+
+```yaml
+/tmp/hellotommy # :DDDDDDDDDDD 
+  file.managed
+```
+
+#### [YAML simple structure](https://docs.saltproject.io/salt/user-guide/en/latest/topics/overview.html#yaml-simple-structure)
+- Scalar: Avain ja yksittäinen arvo esim. vihannekset: herneet.
+- Lists: Lista asioita esim. vihannekset: herneet, porkkanat.
+- Dictionary: Useita avaimia ja arvoja esim. illallinen: alkupala, pääruoka, jälkiruoka.
+
+#### [Lists and dictionaries - YAML block structures](https://docs.saltproject.io/salt/user-guide/en/latest/topics/overview.html#lists-and-dictionaries-yaml-block-structures)
+- YAML on lohkoihin perustuva tietomuoto, jossa sisennys määrittää kontekstin. Ominaisuudet ja listat täytyy sisentää tavallisesti kahdella välilyönnillä.
+- Kokoelmat, kuten listat ja sanakirjat, merkitään viivalla ja välilyönnillä 
+```yaml
+Fruits: # Miten lista kuuluu tehdä käyttäen Yaml block structures.
+  - Apple
+  - Banana
+```
+
+```yaml
+henkilö: # Dictionaries tapahtuu taas tällä tavalla.
+  nimi: "Esimerkki"
+  ikä: 50
+  ammatti: "Timpuri"
+```
+
+## a) Paikallisesti. 👨
+
+Edelliseen tehtävään viitaten [H2 Soitto kotiin](https://github.com/thsoini/linux-course/blob/main/H2.md#h2-soitto-kotiin) tässä tehtävässä käytetään samaa ympäristöä, Vagrant + Linux virtuaalikoneet Debian/Bookworm64
+Tehtävän aloitus `vagrant up` & `vagrant ssh [koneen nimi]`
+
+Ensimmäiseksi loin polun `sudo mkdir -p /srv/salt/hello/` jonka jälkeen siirryin kyseiseen hakemistoon käyttäen `cd /srv/salt/hello/`
+- ![image](https://github.com/user-attachments/assets/c8b98984-3f4c-4001-90f4-5c8da8fd1bb3)
+
+Tämän jälkeen siirryin teksti-editoriin ja lisäsin tyhjään tiedostoon määrityksen, jolla Salt hallitsee /tmp/hellosteffe-tiedoston olemassaoloa ja sisältöä. `sudoedit init.sls`
+
+- ![image](https://github.com/user-attachments/assets/b4bb5fc2-913f-456e-8e8b-610927af13b9)
+-  Käytin Teron sivuilta valmista [SLS tiedostoa](https://terokarvinen.com/2024/hello-salt-infra-as-code/)
+
+-  Tehtävässä kokeilin Micro-nimistä tekstieditoria. Tehtävän ainoa ongelma oli se, että olen tottunut Nanoon, ja `Ctrl + X` ei toiminut kyseisestä editorista poistumiseksi.
+ -  Editorista pääsee ulos käyttämällä `Ctrl + Q`.
+  
+- ![image](https://github.com/user-attachments/assets/5e7fb63a-569f-4bde-8b8b-e98ec49446f7)
+
+  Nyt, kun olin saanut tiedostoon sisältöä, oli aika kokeilla sen toimivuutta komennolla. `sudo salt-call --local state.apply hello`
+
+- ![image](https://github.com/user-attachments/assets/b51ef1da-d74b-441e-8c62-eb002f90fc63)
+- Salt toi tyhjän tiedoston /tmp/hellosteﬀe, koska tiedostossa ei ollut määritelty mitään tiedoston sisältöä.
+
+---------------------------------------------------------------------------------------------------------------------
+
+## B) Verkon yli orjalla. 🧙‍♂️
+
+Aikaisemmassa [H2 Tehtävässä](https://github.com/thsoini/linux-course/blob/main/H2.md#c-kaksin-kaunihimpi-tee-kahden-linux-tietokoneen-verkko-vagrantilla-osoita-ett%C3%A4-koneet-voivat-pingata-toisiaan) tein Salt-Masterin ja Salt-Minionin ja käytin tässä tehtävässä samoja koneita.
+
+- Käytin komentoa `sudo salt '*' state.apply hello`
+- ![image](https://github.com/user-attachments/assets/460d07d2-a18c-42bf-ae07-6ea954dc94ff)
+- Minion suoritti annetun käskyn ja loi tiedoston nimeltä /tmp/hellotommy, kuten changes-kohdassa ilmoitetaan
+
+Alla muutokset mitä tein sls tiedoston sisään.
+
+```yaml
+/tmp/hellotommy
+  file.managed
+```
+
+-------------------------------------------------------------------------------------------------------------------------------
+
+## C) SLS tiedosto, 📁
+
+Tein kokonaan uuden polun `sudo mkdir -p /srv/salt/salt/tilat/` tämän, jälkeen siirryin polkuun `cd /srv/salt/tilat/` jonka jälkeen tein sls tiedoston käyttäen komentoa `sudoedit init.sls` 
+- ![image](https://github.com/user-attachments/assets/0a60db81-663d-4a3a-866c-c10b51dcb5cd)
 
 
-#### Lists and dictionaries - YAML block structures
--
--
+Ohjeistu kyseiseen sls tiedostoon saatu [salt.states.pkg](https://docs.saltproject.io/en/master/ref/states/all/salt.states.pkg.html#module-salt.states.pkg)
+
+```yaml
+Lataa ohjelmat:
+  pkg.installed:
+    -pkgs:
+       - tree
+       - curl
+```
+
+Tiedosto tallennettu ja päästy ulos, komento `sudo salt '*' state.sls tilat`
+
+![image](https://github.com/user-attachments/assets/26f30837-2487-4a79-856d-c7c464c32c57)
+
+Tämän jälkeen lisäsin [file](https://docs.saltproject.io/salt/user-guide/en/latest/topics/states.html#create-a-disable-usb-storage-state) tilafunktion, 
+
+```yaml
+Lataa ohjelmat:
+  pkg.installed:
+    -pkgs:
+       - tree
+       - curl
+
+/tmp/hellosteffe:
+  file.managed:
+    - contents: |
+       Testi123
+```
+
+Käytin komentoa `sudo salt '*' state.sls tilat` 
+
+- ![image](https://github.com/user-attachments/assets/0f208d93-47ed-4ae0-a510-9dcf552cc113)
+
+
+Halusin vielä lisätä kolmannen tilafunktion sls tiedostoon mikä oli [service](https://docs.saltproject.io/en/3006/ref/states/all/salt.states.service.html) 
+- Komennolla `systemctl list-units --type=service` Sain selville, mitkä sovellukset olivat kyseisellä hetkellä käynnissä.
+- ![image](https://github.com/user-attachments/assets/653d9e7d-4113-4f3a-93df-af70f9e46f17)
+
+```yaml
+Lataa ohjelmat:
+  pkg.installed:
+    -pkgs:
+       - tree
+       - curl
+
+/tmp/hellosteffe:
+  file.managed:
+    - contents: |
+       Testi123
+
+dbus active?:
+  service.running:
+    - name: dbus
+    - name: True
+```
+Ensimmäinen `sudo salt '*' state.sls tilat`
+- ![image](https://github.com/user-attachments/assets/04600193-bfb4-4719-9abf-4dd3489ffc1e)
+
+Toinen `sudo salt '*' state.sls tilat`
+- ![image](https://github.com/user-attachments/assets/89d52a10-78f8-45f8-b32b-ffa3aac4154a)
+
+Viides `sudo salt '*' state.sls tilat` Seuraavilla ajokerroilla mitään ei enää tapahtunut Salt ilmoitti, että kaikki on jo kunnossa ja muutoksia ei ole tapahtunut.  
+- ![image](https://github.com/user-attachments/assets/14415439-7b24-4b81-acbe-16073b7cb35c)
+
+Koska ajon aikana ei tapahtunut enää muutoksia, voidaan todeta, että tilatiedosto on idempotentti ✅ 
+
+
+
+
+
+
+
+## Lähteet 
+
+Kurssi: Palvelinten Hallinta 2025. https://terokarvinen.com/palvelinten-hallinta/
+
+Karvinen. 2024. Hello Salt Infra-as-Code https://terokarvinen.com/2024/hello-salt-infra-as-code/ 
+
+Salt Project. salt.states.pkg. https://docs.saltproject.io/en/master/ref/states/all/salt.states.pkg.html#module-salt.states.pkg
+
+Salt Project. salt.states.service. https://docs.saltproject.io/en/3006/ref/states/all/salt.states.service.html
+
+Salt Project. Salt states. https://docs.saltproject.io/salt/user-guide/en/latest/topics/states.html#create-a-disable-usb-storage-state
+
+H2 Tehtävä https://github.com/thsoini/linux-course/blob/main/H2.md#h2-soitto-kotiin
+
