--- a/H3.md
+++ b/H3.md
@@ -62,17 +62,18 @@ Ensimmäiseksi loin polun `sudo mkdir -p /srv/salt/hello/` jonka jälkeen siirry
 Tämän jälkeen siirryin teksti-editoriin ja lisäsin tyhjään tiedostoon määrityksen, jolla Salt hallitsee /tmp/hellosteffe-tiedoston olemassaoloa ja sisältöä. `sudoedit init.sls`
 
 - ![image](https://github.com/user-attachments/assets/b4bb5fc2-913f-456e-8e8b-610927af13b9)
--  Käytin Teron sivuilta valmista [SLS tiedostoa](https://terokarvinen.com/2024/hello-salt-infra-as-code/)
-
+-  Käytin Teron sivuilta löytyvää [init.sls tiedoston sisältöä](https://terokarvinen.com/2024/hello-salt-infra-as-code/#:~:text=/tmp/hellotero%3A,file.managed)
+```yaml
+/tmp/hellotero:
+  file.managed
+```
 -  Tehtävässä kokeilin Micro-nimistä tekstieditoria. Tehtävän ainoa ongelma oli se, että olen tottunut Nanoon, ja `Ctrl + X` ei toiminut kyseisestä editorista poistumiseksi.
- -  Editorista pääsee ulos käyttämällä `Ctrl + Q`.
-  
-- ![image](https://github.com/user-attachments/assets/5e7fb63a-569f-4bde-8b8b-e98ec49446f7)
+-  Editorista pääsee ulos käyttämällä `Ctrl + Q`.
 
-  Nyt, kun olin saanut tiedostoon sisältöä, oli aika kokeilla sen toimivuutta komennolla. `sudo salt-call --local state.apply hello`
+- Nyt, kun olin saanut tiedostoon sisältöä, oli aika kokeilla sen toimivuutta komennolla. `sudo salt-call --local state.apply hello`
 
 - ![image](https://github.com/user-attachments/assets/b51ef1da-d74b-441e-8c62-eb002f90fc63)
-- Salt toi tyhjän tiedoston /tmp/hellosteﬀe, koska tiedostossa ei ollut määritelty mitään tiedoston sisältöä.
+- Salt loi tyhjän tiedoston /tmp/hellosteﬀe, koska tiedostossa ei ollut määritelty mitään tiedoston sisältöä.
 
 ---------------------------------------------------------------------------------------------------------------------
 
@@ -127,6 +128,8 @@ Lataa ohjelmat:
     - contents: |
        Testi123
 ```
+- file.managed alapuolelle lisätty tietoa, jotta alla oleva warning häviää.
+- ![image](https://github.com/user-attachments/assets/98116d3d-3a06-4d0e-8142-a2f5c1beebf5)
 
 Käytin komentoa `sudo salt '*' state.sls tilat` 
 
@@ -154,6 +157,9 @@ dbus active?:
     - name: dbus
     - name: True
 ```
+
+### Saman komennon ajaminen.
+
 Ensimmäinen `sudo salt '*' state.sls tilat`
 - ![image](https://github.com/user-attachments/assets/04600193-bfb4-4719-9abf-4dd3489ffc1e)
 
