--- a/H4.md
+++ b/H4.md
@@ -1,12 +1,26 @@
 # H4 Pkg-file-service
 
 ## Lue ja tiivistä
--
--
--
--
--
-
+### [Pkg-File-Service – Control Daemons with Salt – Change SSH Server Port](https://terokarvinen.com/2018/04/03/pkg-file-service-control-daemons-with-salt-change-ssh-server-port/?fromSearch=karvinen%20salt%20ssh) (2018 Karvinen)
+- sshd_config filessa lisää tai muuta portti
+- ssh sls tiedosto näyttää kutakuinkin tältä ⏬
+```yaml
+openssh-server:
+ pkg.installed
+/etc/ssh/sshd_config:
+ file.managed:
+   - source: salt://sshd_config
+sshd:
+ service.running:
+   - watch:
+     - file: /etc/ssh/sshd_config
+```
+```yaml
+  - watch:
+     - file: /etc/ssh/sshd_config
+```
+- ⏫ ( - watch ) ja kertoo saltille, että sshd tulee käynnistää uudelleen mikäli muutoksia on tapahtunut sshd_config tiedostossa
+- Komennollla `sudo salt '*' state.apply sshd` ajetaan sls tiedosto.
 
 
 ## Apache easy mode
@@ -41,8 +55,7 @@ config.vm.define "tmaster", primary: true do |tmaster|
 
 ### Tapa 2 Index.html
 
-Ilman tekstieditoria muutos tapahtuu komennolla `echo "<h1>Komennolla vaihdettu</h1>" | sudo tee /var/www/html/ind
-ex.html`
+Ilman tekstieditoria muutos tapahtuu komennolla `echo "<h1>Komennolla vaihdettu</h1>" | sudo tee /var/www/html/index.html`
 
  ![image](https://github.com/user-attachments/assets/83ef4108-1009-448f-8935-22242f859848)
  
@@ -69,7 +82,7 @@ apache2.service:
   file.managed:
     - source: salt://apache2/index.html
 ```
-Tämän jälkeen ajoin komennon `sudo salt '*' state.sls apache2`
+Tämän jälkeen ajoin komennon `sudo salt '*' state.sls apache2` ja tulostus oli luokkaa 💀
 
 ![image](https://github.com/user-attachments/assets/e45dd72c-4c9d-4564-9431-535a160268fc)
 
@@ -85,35 +98,65 @@ Kokeilin uusiksi `sudo salt '*' state.sls apache2` ja sain onnistuneen tulostuks
 
 ![image](https://github.com/user-attachments/assets/70cc7974-59f4-4feb-b793-197e1d398e5a)
 
-Kokeilin vielä, t001 koneen ip osoiteella, kyseinen apache2 palvelun.
-
-![image](https://github.com/user-attachments/assets/0941152c-e164-4892-a1c0-8dc77603d01f)
+Kokeilin vielä t001-koneen IP-osoitteella, jotta sain testattua Apache2-palvelun toimivuutta.
+- ⏬ Molempien tmaster & t001 apache2 tulostus
+- ![image](https://github.com/user-attachments/assets/0941152c-e164-4892-a1c0-8dc77603d01f)
 
 -------------------------------------------------------------------------------------------------
 
 ## B) SSHouto
 
-Tehtävän aloitus lähti liikenteeseen komennolla `cd /srv/salt/` minkä jälkeen loin oman polun ssh `sudo mkdir ssh` kun kansio oli tehty oli aika tehdä init.sls tiedosto kyseisen kansion sisään, `cd /srv/salt/ssh` , `sudoedit init.sls` 
-
-[SLS tiedosto saatu Teron sivuilta](https://terokarvinen.com/2018/04/03/pkg-file-service-control-daemons-with-salt-change-ssh-server-port/?fromSearch=karvinen%20salt%20ssh#:~:text=%24%20cat%20/srv/salt/sshd.sls%0Aopenssh%2Dserver%3A%0A%20pkg.installed%0A/etc/ssh/sshd_config%3A%0A%20file.managed%3A%0A%20%20%20%2D%20source%3A%20salt%3A//sshd_config%0Asshd%3A%0A%20service.running%3A%0A%20%20%20%2D%20watch%3A%0A%20%20%20%20%20%2D%20file%3A%20/etc/ssh/sshd_config)
+Tehtävän aloitus lähti liikenteeseen komennolla `cd /srv/salt/` minkä jälkeen loin oman polun ssh `sudo mkdir ssh`, tämän jälkeen siirryin `cd etc/ssh/` lisäsin sshd_config tiedostoon portit 
+```yaml
+Port 22
+Port 1234
+```
+ja kopioin sshd_config tiedoston juuri äsken tekemään kansioon. `cp ssh_config /srv/salt/ssh/`
+tämän jälkeen aloin tekemään init.sls, `cd /srv/salt/ssh` , `sudoedit init.sls`  [SLS tiedosto saatu Teron sivuilta](https://terokarvinen.com/2018/04/03/pkg-file-service-control-daemons-with-salt-change-ssh-server-port/?fromSearch=karvinen%20salt%20ssh#:~:text=%24%20cat%20/srv/salt/sshd.sls%0Aopenssh%2Dserver%3A%0A%20pkg.installed%0A/etc/ssh/sshd_config%3A%0A%20file.managed%3A%0A%20%20%20%2D%20source%3A%20salt%3A//sshd_config%0Asshd%3A%0A%20service.running%3A%0A%20%20%20%2D%20watch%3A%0A%20%20%20%20%20%2D%20file%3A%20/etc/ssh/sshd_config)
 
 ```yaml
 openssh-server:
  pkg.installed
 /etc/ssh/sshd_config:
  file.managed:
-   - source: salt://sshd_config
+   - source: salt://sshd_config # Tämä korjattu aikaisemmin ollut source: salt:/sshd_config
 sshd:
  service.running:
    - watch:
      - file: /etc/ssh/sshd_config
 ```
 
+Jostain syystä olin omissa ajatuksissa jättänyt yhden "/" pois kohdasta - source: minkä vuoksi tulostus oli 💀
+
+Komento `sudo salt '*' state.sls ssh`
+
+![image](https://github.com/user-attachments/assets/6b43f06f-4179-46d4-b164-818e579fa5a3)
+
+Lisäsin source kohtaan yhden "/" 
+- Vanha `source: salt:/sshd_config`
+- Uusi `source: salt://sshd_config`
+Annoin komennon `sudo salt '*' state.sls ssh` uudelleen ja nyt tulostus oli 💚 
+
+![image](https://github.com/user-attachments/assets/dca10acd-3ef2-4f57-a446-e8d512dd1842)
+
+Tämän jälkeen kokeilin vielä yhteydet 
+
+![image](https://github.com/user-attachments/assets/405ca0dc-5858-4b8b-bd2f-5fd832c57a69)
+![image](https://github.com/user-attachments/assets/b16375d2-e5c2-4d4b-a31c-9c6792c91dc4)
+
+
+
+
+
 
 
 # Lähteet
 
-https://askubuntu.com/questions/176964/permanently-removing-apache2#:~:text=apache2%2Dcommon%0A//or-,sudo%20apt%2Dget%20purge%20apache2%20apache2%2Dutils%20apache2%2Dbin%20apache2.2%2Dcommon,-Finally%2C%20run
+Kurssi [Palvelinten Hallinta 2025](https://terokarvinen.com/palvelinten-hallinta/)
 
+Karvinen 2018 [Pkg-File-Service – Control Daemons with Salt – Change SSH Server Port](https://terokarvinen.com/2018/04/03/pkg-file-service-control-daemons-with-salt-change-ssh-server-port/?fromSearch=karvinen%20salt%20ssh)
 
-https://terokarvinen.com/2018/04/03/pkg-file-service-control-daemons-with-salt-change-ssh-server-port/?fromSearch=karvinen%20salt%20ssh
+Khalsa 2013 [Apche2 poisto komento](https://askubuntu.com/questions/176964/permanently-removing-apache2#:~:text=apache2%2Dcommon%0A//or-,sudo%20apt%2Dget%20purge%20apache2%20apache2%2Dutils%20apache2%2Dbin%20apache2.2%2Dcommon,-Finally%2C%20run)
+
+H2 Tehtävä [Vagrant file](https://github.com/thsoini/linux-course/blob/main/H2.md#dherra-orja-verkossa) Alkuperäinen lähde [Karvinen - Salt Vagrant - automatically provision one master and two slaves ](https://terokarvinen.com/2023/salt-vagrant/#infra-as-code---your-wishes-as-a-text-file:~:text=Vagrantfile%20in%20place.-,Ready%20made%20Vagrantfile%20for%20three%20computers,end,-Run%20Three%20Computers)
+
