--- a/H4.md
+++ b/H4.md
@@ -23,7 +23,7 @@ sshd:
 - Komennollla `sudo salt '*' state.apply sshd` ajetaan sls tiedosto.
 
 
-## Apache easy mode
+## A) Apache easy mode
 
 ###  Ensin käsin, vasta sitten automaattisesti.
 - `vagrant up`
